[package]
name = "verusfmt"
version = "0.4.2"
edition = "2021"
autoexamples = false
license = "MIT"
description = "An opinionated formatter for Verus"
homepage = "https://github.com/verus-lang/verusfmt"
repository = "https://github.com/verus-lang/verusfmt"
readme = "README.md"
keywords = ["verus", "formatter", "pretty-printer"]
categories = ["development-tools"]
exclude = [
    ".gitattributes",
    ".github/",
    "examples/",
    "tests/",
    "util/",
]

[dependencies]
axoupdater = { version = "0.7.2", features = ["blocking", "github_releases"], default-features = false }
clap = { version = "4.3.11", features = ["derive"] }
fs-err = "2.9.0"
insta = "1.30.0"
miette = { version = "7.2.0", features = ["fancy"] }
pest = "2.0"
pest_derive = "2.0"
pretty = "0.12.1"
regex = "1.9.6"
similar = "2.2.1"
tempfile = "3.10.1"
thiserror = "1.0.52"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17" }

[dev-dependencies]
insta = { version = "1.30.0" }
similar = { version = "2.2.1" }
glob = "0.3.1"
stacker = "0.1.15"
glob-macro = { path = "glob-macro" }

# Spend more time on initial compilation in exchange for faster runs
[profile.dev.package.insta]
opt-level = 3

# Spend more time on initial compilation in exchange for faster runs
[profile.dev.package.similar]
opt-level = 3

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace]
members = ["glob-macro"]

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Which actions to run on pull requests
pr-run-mode = "plan"
# Publish jobs to run in CI
publish-jobs = ["./publish-crates"]
# Whether to install an updater program
install-updater = false
# Path that installers should place binaries in
install-path = "CARGO_HOME"
