[package]
name = "verusfmt"
version = "0.5.1"
edition = "2021"
autoexamples = false
license = "MIT"
description = "An opinionated formatter for Verus"
homepage = "https://github.com/verus-lang/verusfmt"
repository = "https://github.com/verus-lang/verusfmt"
readme = "README.md"
keywords = ["verus", "formatter", "pretty-printer"]
categories = ["development-tools"]
exclude = [
    ".gitattributes",
    ".github/",
    "examples/",
    "tests/",
    "util/",
]

[dependencies]
axoupdater = { version = "0.9.0", features = ["blocking", "github_releases"], default-features = false, optional = true }
clap = { version = "4.5.26", features = ["derive"] }
fs-err = "3.0.0"
miette = { version = "7.4.0", features = ["fancy"] }
pest = "2.7"
pest_derive = "2.7"
pretty = "0.12.3"
regex = "1.11.1"
similar = "2.6.0"
tempfile = "3.15.0"
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19" }

[dev-dependencies]
insta = { version = "1.42.0" }
similar = { version = "2.6.0" }
stacker = "0.1.17"
glob-macro = { path = "glob-macro" }

[features]
# We enable the "optional" dependencies, that are only necessary for the binary,
# as default-enabled features. If verusfmt is being used as a library, then that
# program can turn default features off in order to obtain a more stripped-down
# version of the library.
default = ["axoupdater"]

# Spend more time on initial compilation in exchange for faster runs
[profile.dev.package.insta]
opt-level = 3

# Spend more time on initial compilation in exchange for faster runs
[profile.dev.package.similar]
opt-level = 3

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace]
members = ["glob-macro"]

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Which actions to run on pull requests
pr-run-mode = "plan"
# Publish jobs to run in CI
publish-jobs = ["./publish-crates"]
# Whether to install an updater program
install-updater = false
# Path that installers should place binaries in
install-path = "CARGO_HOME"
