[package]
name = "verusfmt"
version = "0.6.4"
edition = "2021"
autoexamples = false
license = "MIT"
description = "An opinionated formatter for Verus"
homepage = "https://github.com/verus-lang/verusfmt"
repository = "https://github.com/verus-lang/verusfmt"
readme = "README.md"
keywords = ["verus", "formatter", "pretty-printer"]
categories = ["development-tools"]
exclude = [
    ".gitattributes",
    ".github/",
    "examples/",
    "tests/",
    "util/",
]

[dependencies]
axoupdater = { version = "0.10.0", features = ["blocking", "github_releases"], default-features = false, optional = true }
clap = { version = "4.6.0", features = ["derive"] }
fs-err = "3.3.0"
miette = { version = "7.6.0", features = ["fancy"] }
pest = "2.8"
pest_derive = "2.8"
pretty = "0.12.5"
regex = "1.12.3"
similar = "3.1.0"
tempfile = "3.27.0"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23" }

[dev-dependencies]
insta = { version = "1.47.2" }
similar = { version = "3.1.0" }
stacker = "0.1.23"
glob-macro = { path = "glob-macro" }

[features]
# We enable the "optional" dependencies, that are only necessary for the binary,
# as default-enabled features. If verusfmt is being used as a library, then that
# program can turn default features off in order to obtain a more stripped-down
# version of the library.
default = ["axoupdater"]

# Spend more time on initial compilation in exchange for faster runs
[profile.dev.package.insta]
opt-level = 3

# Spend more time on initial compilation in exchange for faster runs
[profile.dev.package.similar]
opt-level = 3

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace]
members = ["glob-macro"]
